# Tebex-Arma3

./: .gitignore  Api.cpp  Api.h  CMakeLists.txt  Config.cpp  Config.h  LICENSE.md  README.md  extension.cpp  library.cpp
include/: extension.h
tools/: build.bat  build.sh
